--- a/index.html
+++ b/index.html
@@ -1,46 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style1.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>89Bar</title>
 </head>
+
 <body>
     <div class="container-fluid fondo">
-            <div class="row box align-items-center justify-content-center">
-                <div class="col-6">
-                    <div class="logo">
-                        <h1>logo</h1>
-                    </div>
+        <div class="row box align-items-center justify-content-center">
+            <div class="col-6">
+                <div class="logo">
+                    <img src="img/logofood89.png" alt="">
                 </div>
             </div>
-            <div class="row box align-content-end">
-                <div class="col-12 ">
-                    <div class="text">
-                        <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                            Lorem ipsum dolor, sit amet consectetur
-                            Lorem ipsum dolor, sit amet consectetur
-                            Lorem ipsum dolor, sit amet consectetur
-                        </h3>
-                    </div>
+        </div>
+        <div class="row box align-content-end">
+            <div class="col-12 ">
+                <div class="text">
+                    <h3>"Delicious flavor in each bite, in our restaurant it is always time to enjoy".
+                    </h3>
                 </div>
             </div>
-            <div class="row box align-content-end justify-content-center">
-                <div class="col-7">
-                    <div class="boton">
-                        <button type="button" class="btn btn-success w-100">Success</button>
-                    </div>
+        </div>
+        <div class="row box align-content-end justify-content-center">
+            <div class="col-10">
+                <div class="boton">
+                    <button type="button" class="btn text-light">Log in</button>
                 </div>
-                <div class="col-12">
-                    <div class="span text-warning">
-                        <h5>You do not have an account?<a href="#">Sign up.</a></h5>
-                    </div>
+            </div>
+            <div class="col-12">
+                <div class="span text-warning">
+                    <h5>You do not have an account?<a href="Login.html" style="color: var(--rojo);">Sign up.</a></h5>
                 </div>
+            </div>
 
-            </div>
+        </div>
     </div>
 </body>
+
 </html>
