--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col-12">
                 <div class="span text-warning">
-                    <h5>You do not have an account?<a href="Login.html" style="color: var(--rojo);">Sign up.</a></h5>
+                    <h5>You do not have an account?<a href="Login.html" style="color: var(--rojo); font-weight: 700;">Sign up.</a></h5>
                 </div>
             </div>
 
