--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
             </div>
         </div>
         <div class="row box align-content-end justify-content-center">
-            <div class="col-10">
-                <div class="boton">
-                    <button type="button" class="btn text-light">Log in</button>
-                </div>
+            <div class="col-10 mb-5">
+                <a href="/Login.html" class="submit-btn">START</a>
             </div>
-            <div class="col-12">
+            <!-- <div class="col-12">
                 <div class="span text-warning">
-                    <h5>You do not have an account?<a href="Login.html" style="color: var(--rojo); font-weight: 700;">Sign up.</a></h5>
+                    <h5>You don't have an account?<a href="Login.html" style="color: var(--rojo); font-weight: 700;">Sign up.</a></h5>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
