--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +12,6 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <title>89Bar</title>
 </head>
-
 <body>
     <div class="container-fluid fondo">
         <div class="row box align-items-center justify-content-center">
@@ -33,16 +31,14 @@
         </div>
         <div class="row box align-content-end justify-content-center">
             <div class="col-10 mb-5">
-                <a href="/Login.html" class="submit-btn">START</a>
+                <a href="login.html" class="submit-btn">START</a>
             </div>
             <!-- <div class="col-12">
                 <div class="span text-warning">
                     <h5>You don't have an account?<a href="Login.html" style="color: var(--rojo); font-weight: 700;">Sign up.</a></h5>
                 </div>
             </div> -->
-
         </div>
     </div>
 </body>
-
 </html>
