--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="row box align-content-end justify-content-center">
             <div class="col-10 mb-5">
-                <a href="login.html" class="submit-btn">START</a>
+                <a href="inicio.html" class="submit-btn">START</a>
             </div>
             <!-- <div class="col-12">
                 <div class="span text-warning">
