--- a/inicio.html
+++ b/inicio.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <div class="container-fluid" style="background-color: #E3E1E1;">
+        <div class="caja"></div>
         <div class="row  align-items-center justify-content-center" style="height: 40vh;">
             <div class="col-6">
                 <div class="logo">
@@ -62,6 +63,13 @@
                             <div class="col-11">
                                 <button type="submit" class="submit-btn">Sign up</button>
                             </div>
+                            <div class="col-3">
+                                <a href="principal.html" style="color:black;"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
+                                    fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd"
+                                      d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z" />
+                                  </svg></a>
+                              </div>
                         </div>
                     </form>
                 </div>
